hphp/hack/test/typecheck/readonly/readonly_idx_2.php.exp
File "readonly_idx_2.php", line 9, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
